# ArticlesExamples

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
examples/AggregateReflection/: CMakeLists.txt  README.md  repeat_macro.hpp  struct_reflector.hpp  test_struct_reflector.cpp
examples/AggregateReflection/test_struct_reflector/: CMakeLists.txt
examples/Augmentedredblacktree/: CMakeLists.txt  README.md  augmented-rbt-ex1.cpp
examples/Augmentedredblacktree/augmented_rbt_ex1/: CMakeLists.txt
examples/Constexpr/: CMakeLists.txt  NearPerfectHash.cpp  README.md  cx_helpers.hpp  fix_enums.h  near_perfect_hash.hpp
examples/Constexpr/near_perfect_hash/: CMakeLists.txt
examples/CoroutinesUring/: CMakeLists.txt  README.md  async_io_uring_task.hpp  io_uring_coroutine_helpers.cpp  io_uring_coroutine_helpers.hpp  simple_http_server.cpp
examples/CoroutinesUring/simple_http_server/: CMakeLists.txt
examples/Cpp26Annotations/: CMakeLists.txt  README.md  annotations_example.cpp
examples/Cpp26Annotations/annotations_example/: CMakeLists.txt
examples/Cpp26FeatureDemo/: CMakeLists.txt  README.md  cpp26_reflect_demo.cpp  schema.sql
examples/Cpp26FeatureDemo/cpp26_reflect_demo/: CMakeLists.txt
examples/Cpp26ProxyGeneration/: CMakeLists.txt  README.md  proxy_generation.cpp
examples/Cpp26ProxyGeneration/proxy_generation/: CMakeLists.txt
examples/Crtperasure/: CMakeLists.txt  README.md  template_variant.cpp
examples/Crtperasure/template_variant/: CMakeLists.txt
examples/Eapidiom/: CMakeLists.txt  README.md  eap_idiom.cpp
examples/Eapidiom/eap_idiom/: CMakeLists.txt
examples/Implementingplugins/: CMakeLists.txt  DynamicLibrary.hpp  IPluginBase.hpp  PluginBase.hpp  PluginInfo.cpp  PluginInfo.hpp  PluginManager.cpp  PluginManager.hpp  PluginMethods.hpp  PluginRegistration.hpp  README.md  TestPluginOne.cpp  plugin.cpp
examples/Implementingplugins/plugin/: CMakeLists.txt
examples/Luabridge/: CMakeLists.txt  README.md  lua_cpp_bridge.hpp  test.lua  test_lua.cpp
examples/Luabridge/test_lua/: CMakeLists.txt
examples/Orderingstaticinitialization/: CMakeLists.txt  README.md  ordered_static_initializer.cpp  ordered_static_initializer.hpp  static_order.cpp
examples/Orderingstaticinitialization/static_order/: CMakeLists.txt
examples/Overridingvtableatruntime/: CMakeLists.txt  README.md  vmt-override-ex1.cpp
examples/Overridingvtableatruntime/vmt_override_ex1/: CMakeLists.txt
examples/Pointertomemberswithvariadic/: CMakeLists.txt  README.md  variadic-ptm-ex1.cpp  variadic-ptm-ex2.cpp
examples/Pointertomemberswithvariadic/variadic_ptm_ex1/: CMakeLists.txt
examples/Pointertomemberswithvariadic/variadic_ptm_ex2/: CMakeLists.txt
examples/Pointertomembertemplatearguments/: CMakeLists.txt  README.md  ptm-ex1.cpp  ptm-ex2.cpp
examples/Pointertomembertemplatearguments/ptm_ex1/: CMakeLists.txt
examples/Pointertomembertemplatearguments/ptm_ex2/: CMakeLists.txt
examples/Powerofvariadictemplates/: CMakeLists.txt  README.md  vartempl-ex3.cpp  vartempl-ex4.cpp  vartempl-ex5.cpp
examples/Powerofvariadictemplates/vartempl_ex3/: CMakeLists.txt
examples/Powerofvariadictemplates/vartempl_ex4/: CMakeLists.txt
examples/Powerofvariadictemplates/vartempl_ex5/: CMakeLists.txt
examples/Rcuuserland/: CMakeLists.txt  README.md  rcu-userland-ex1.cpp
examples/Rcuuserland/rcu_userland_ex1/: CMakeLists.txt
examples/Reflection/: CMakeLists.txt  FindSmartGCC.cmake  README.md  reflection.hpp  reflection_call.hpp  reflection_class.hpp  reflection_example.cpp  reflection_method.hpp  reflection_module.hpp
examples/Reflection/reflection_example/: CMakeLists.txt
examples/Sortablerandomaccesstree/: CMakeLists.txt  README.md  dynamic_comparator_builder.hpp  reflection_constructor.hpp  reflection_helpertypes.hpp  sortable-random-access-tree-example.cpp  sortable-random-access-tree.hpp
examples/Sortablerandomaccesstree/sortable_random_access_tree_example/: CMakeLists.txt
examples/Templateauto/: CMakeLists.txt  README.md  template_auto.cpp  template_auto.hpp
examples/Templateauto/template_auto/: CMakeLists.txt
examples/Usingshrarablerobustsynch/: CMakeLists.txt  README.md  robust_shareable_autoresetevent.hpp  robust_shareable_mutex.hpp  robust_shareable_primitives.cpp  robust_shareable_recursivemutex.hpp  shareable_object_slot.hpp
examples/Usingshrarablerobustsynch/robust_shareable_primitives/: CMakeLists.txt
examples/VmtPointer/: CMakeLists.txt  README.md  test_vmt_helper.cpp  virtual_method_helper.hpp
examples/VmtPointer/test_vmt_helper/: CMakeLists.txt
