cmake_minimum_required(VERSION 3.10)
project(UnifiedExamplesBundle CXX)

message(STATUS "--------------------------------------------------------")
message(STATUS "Checking prerequisites for Unified C++ Examples Bundle...")
message(STATUS "--------------------------------------------------------")

# 1. MSYS2/MinGW prerequisite check on Windows
if(WIN32)
    if(NOT MINGW AND NOT CYGWIN AND NOT CMAKE_COMPILER_IS_GNUCXX)
        message(FATAL_ERROR "For Windows, MSYS2/MinGW environment is a prerequisite. Please ensure you are compiling under MSYS2 (MinGW64/UCRT64) shell.")
    else()
        message(STATUS "Platform Check: Windows (MSYS2/MinGW Verified)")
    endif()
else()
    message(STATUS "Platform Check: ${CMAKE_SYSTEM_NAME}")
endif()

# 2. Boost prerequisite check (headers only)
find_package(Boost REQUIRED)
if(Boost_FOUND)
    message(STATUS "Prerequisite Boost: Found (Headers: ${Boost_INCLUDE_DIRS})")
endif()

# 3. Lua prerequisite check (supports version-suffixed libraries)
find_path(LUA_INCLUDE_DIR NAMES lua.h PATH_SUFFIXES lua5.3 lua5.4 lua5.2 lua5.1 lua53 lua54)
find_library(LUA_LIBRARY NAMES lua5.3 lua5.4 lua5.2 lua5.1 lua53 lua54 lua)
if(LUA_INCLUDE_DIR AND LUA_LIBRARY)
    set(LUA_FOUND TRUE CACHE INTERNAL "Lua found status")
    set(LUA_LIBRARIES "${LUA_LIBRARY}" CACHE FILEPATH "Path to Lua library")
    set(LUA_INCLUDE_DIR "${LUA_INCLUDE_DIR}" CACHE PATH "Path to Lua include directory")
    message(STATUS "Prerequisite Lua: Found (Headers: ${LUA_INCLUDE_DIR}, Library: ${LUA_LIBRARY})")
else()
    find_package(Lua REQUIRED)
endif()

# 4. SQLite3 prerequisite check
find_package(SQLite3 REQUIRED)
if(SQLite3_FOUND)
    message(STATUS "Prerequisite SQLite3: Found (Library: SQLite::SQLite3)")
endif()

# 5. Threads prerequisite check
find_package(Threads REQUIRED)
if(Threads_FOUND)
    message(STATUS "Prerequisite Threads: Found")
endif()

# 6. liburing check (Linux-only, needed by CoroutinesUring)
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    find_path(URING_INCLUDE_DIR NAMES liburing.h)
    find_library(URING_LIBRARY NAMES uring)
    if(URING_INCLUDE_DIR AND URING_LIBRARY)
        set(URING_FOUND TRUE)
        message(STATUS "Prerequisite liburing: Found (Headers: ${URING_INCLUDE_DIR}, Library: ${URING_LIBRARY})")
    else()
        set(URING_FOUND FALSE)
        message(WARNING "Prerequisite liburing was NOT found. Linux-only 'CoroutinesUring' example will be excluded from build.")
    endif()
else()
    set(URING_FOUND FALSE)
    message(STATUS "Prerequisite liburing: Excluded (Non-Linux platform)")
endif()

message(STATUS "--------------------------------------------------------")
message(STATUS "Prerequisite checks completed successfully. Registering projects...")
message(STATUS "--------------------------------------------------------")

# Register each sub-project subdirectory
add_subdirectory(examples/AggregateReflection)
add_subdirectory(examples/Augmentedredblacktree)
add_subdirectory(examples/Constexpr)

if(URING_FOUND)
    add_subdirectory(examples/CoroutinesUring)
endif()

add_subdirectory(examples/Cpp26Annotations)
add_subdirectory(examples/Cpp26FeatureDemo)
add_subdirectory(examples/Cpp26ProxyGeneration)
add_subdirectory(examples/Crtperasure)
add_subdirectory(examples/Eapidiom)
add_subdirectory(examples/Implementingplugins)
add_subdirectory(examples/Luabridge)
add_subdirectory(examples/Orderingstaticinitialization)
add_subdirectory(examples/Overridingvtableatruntime)
add_subdirectory(examples/Pointertomemberswithvariadic)
add_subdirectory(examples/Pointertomembertemplatearguments)
add_subdirectory(examples/Powerofvariadictemplates)
add_subdirectory(examples/Rcuuserland)
add_subdirectory(examples/Reflection)
add_subdirectory(examples/Sortablerandomaccesstree)
add_subdirectory(examples/Templateauto)
add_subdirectory(examples/Usingshrarablerobustsynch)
add_subdirectory(examples/VmtPointer)
